[package]
name = "rp2040_wait"
version = "0.1.0"
edition = "2021"
authors = ["Shuntaro Ohno <sohno@ushitora.net>"]
description = "Crate for more accurate wait times than Delay using rp2040_hal::timer::Timer."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = { version = "0.8.0", features = ["rt", "critical-section-impl"] }

[dev-dependencies]
cortex-m = "0.7.4"
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.8.0", features = ["rt", "critical-section-impl"] }
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
futures = { version = "0.3.21", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-halt = "0.2.0"